--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:20.0.3'
     implementation 'com.google.firebase:firebase-firestore:22.1.2'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
 
 
     testImplementation 'junit:junit:4.+'
