--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'id.zelory:compressor:2.1.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
+    implementation 'com.github.smarteist:autoimageslider:1.4.0'
 
 
     testImplementation 'junit:junit:4.+'
