--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RedSocialAvicola">
-        <activity android:name=".activities.UserProfileActivity"></activity>
-        <activity android:name=".activities.PostDetailActivity" />
+        <activity android:name=".activities.FiltersActivity"></activity>
+        <activity
+            android:name=".activities.UserProfileActivity"
+            android:parentActivityName=".activities.PostDetailActivity" />
+        <activity
+            android:name=".activities.PostDetailActivity"
+            android:parentActivityName=".activities.HomeActivity" />
         <activity android:name=".activities.EditProfileActivity" />
 
         <provider
