--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.5'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
 
 
     testImplementation 'junit:junit:4.+'
