--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RedSocialAvicola">
-        <activity android:name=".activities.FiltersActivity"
-            android:parentActivityName=".activities.HomeActivity"
-            />
+        <activity android:name=".activities.ChatActivity"></activity>
+        <activity
+            android:name=".activities.FiltersActivity"
+            android:parentActivityName=".activities.HomeActivity" />
         <activity
             android:name=".activities.UserProfileActivity"
             android:parentActivityName=".activities.PostDetailActivity" />
@@ -39,8 +40,9 @@
 
         <activity android:name=".activities.PostActivity" />
         <activity android:name=".activities.CompleteProfileActivity" />
-        <activity android:name=".activities.HomeActivity"
-            android:windowSoftInputMode="stateAlwaysHidden|adjustPan"/>
+        <activity
+            android:name=".activities.HomeActivity"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
         <activity android:name=".activities.RegisterActivity" />
         <activity android:name=".activities.MainActivity">
             <intent-filter>
@@ -61,7 +63,6 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/default_notification_channel_id" />
-
     </application>
 
 </manifest>
